[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/Actors/Bullets/EnemyBullet/EnemyBullet.gd" type="Script" id=1]
[ext_resource path="res://Game/Actors/Bullets/EnemyBullet/EnemyBullet.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 7.28757

[sub_resource type="Animation" id=2]

resource_name = "dead"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Image:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( -4, -4 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=3]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Image:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( -4, -4, -4 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.2, 0.2 ), Vector2( 0.5, 0.5 ) ]
}

[node name="EnemyBullet" type="RigidBody2D" index="0"]

input_pickable = false
collision_layer = 4
collision_mask = 4
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Image" type="Sprite" parent="." index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Collision" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Anim" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = "start"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/dead = SubResource( 2 )
anims/start = SubResource( 3 )
blend_times = [  ]

[node name="LifeTime" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_EnemyBullet_body_entered"]

[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]

[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]


